[package]
name = "bench-async"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
brightness = "0.4.1"
criterion = { version = "0.3.6", features = ["async_tokio"] }
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["fs", "rt-multi-thread"] }

[[bench]]
name = "simple"
harness = false
